--- a/Html Files/index.html
+++ b/Html Files/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <head></head>
 <body>
-  <h1>Akshita Gupta</h1>
+  <div id="hero">
+    <h1>Akshita Gupta</h1>
+  </div>
+  <div id="aboutMe">
+    <a>About me</a>
+  </div>
+  <div id="projects">
+    <a>Projects</a>
+  </div>
+  <div id="contactMe">
+    <a>Contact Me</a>
+  </div>
 </body>
