--- a/index.html
+++ b/index.html
@@ -17,4 +17,42 @@
 
     <title>Akshita Gupta | Software Developer</title>
   </head>
+
+  <body>
+    <!-- Navbar -->
+    <nav>
+      <h1>AKSHITA GUPTA</h1>
+      <ul class="navigation">
+        <li><a href="#skills" class="nav-link">About</a></li>
+        <li><a href="#skills" class="nav-link">Skills</a></li>
+        <li><a href="#contact" class="nav-link">Projects</a></li>
+      </ul>
+      <button class="burger-menu" id="burger-menu">
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
+      </button>
+    </nav>
+
+    <!-- Hero Section -->
+
+    <!-- More about -->
+
+    <!-- Skills section -->
+
+    <!-- Projects section -->
+
+    <!-- Contact section -->
+
+    <!-- Social accounts - Fixed to the right -->
+
+    <!-- Scroll to top -->
+
+    <!-- Footer section -->
+
+    <!-- Website scripts -->
+    <script src="Assets/js/app.js"></script>
+
+    <!-- Ion icons scripts -->
+    <script type="module" src=""></script>
+    <script nomodule src=""></script>
+  </body>
 </html>
